--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ As we look to the future, we remain steadfast in our mission. With your support,
 		
 		<br>Copyright &copy;The Hunger Solution
 		</body>
+</footer>
 	</html>
 	
 			
