--- a/contact_us.html
+++ b/contact_us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 			<head>
-					<title> Products - The Hunger Solution</title>
+					<title> Contact Us - The Hunger Solution</title>
 					<link href="main.css" rel="stylesheet" />
 			</head>
 		<body>
